@@ -14,8 +14,10 @@ using namespace std;
 #include "constant.h"
 #include "terminate.h"
 
-static int gfrURetrieveParameter (const int, int, ENDF *, URResonance *);
-static int gfrUFindRange         (double, URResonance *, bool *);
+static int gfrURetrieveParameterA (const int, int, ENDF *, URResonance *);
+static int gfrURetrieveParameterB (const int, int, ENDF *, URResonance *, const int, double *);
+static int gfrURetrieveParameterC (const int, int, ENDF *, URResonance *);
+static int gfrUFindRange          (const double, URResonance *, bool *);
 static Pcross gfrCrossSectionURR (int, int, int, System *, URResonance *, ENDF *);
 static Pcross gfrBreitWignerURR  (int, double, double, double, ChannelWaveFunc *, URResonance *);
 static double gfrMoldauer        (int, double *, double *, double *);
@@ -50,36 +52,53 @@ Pcross gfrCrossSectionURR(const int ner, const double elab, System *sys, ENDF *l
 
   int lrf = sys->lrf[ner];
 
+  bool itp = false;
+  int  pm = 0, ke = 0;
+
   /*** case A: energy independent parameter, no fission */
   if(lrf == 1){
     if(sys->avefission_flag == 0){
+
+      message << "LRF = 0, LFW = 1 case never tested";
+      WarningMessage();
+
+      int idx = sys->idx[ner] + 1;
+      if(sys->nro[ner] == 1) idx ++;
+
+      pm = gfrURetrieveParameterA(sys->nl,idx,lib,res);
+
+      /*** set Elab at the first resonance energy */
+      for(int p = 0 ; p<pm ; p++) res[p].bw[0].er = elab;
+      itp = false;
+      ke  = 0;
     }
   /*** case B: energy independent, but for fission */
     else{
+      int idx = sys->idx[ner] + 2;
+      if(sys->nro[ner] == 1) idx ++;
+
+      pm = gfrURetrieveParameterB(sys->nl,idx,lib,res,sys->nfw,sys->fwx);
+      ke = gfrUFindRange(elab,res,&itp);
     }
-    message << "LRF=0,1 not yet supported";
-    WarningMessage();
   }
   /*** case C: all parameters are energy dependent */
   else{
-    bool itp = false;
-
     int idx = sys->idx[ner] + 2;
     if(sys->nro[ner] == 1) idx ++;
 
-    int pm = gfrURetrieveParameter(sys->nl,idx,lib,res);
-    int ke = gfrUFindRange(elab,res,&itp);
+    pm = gfrURetrieveParameterC(sys->nl,idx,lib,res);
+    ke = gfrUFindRange(elab,res,&itp);
+  }
 
-    /*** need interpolation */
-    if(itp){
-      z1 = gfrCrossSectionURR(pm,ke  ,ner,sys,res,lib);
-      z2 = gfrCrossSectionURR(pm,ke+1,ner,sys,res,lib);
-      z0 = gfrUInterpolation(elab,z1,z2);
-    }
-    /*** no interpolation case */
-    else{
-      z0 = gfrCrossSectionURR(pm,ke,ner,sys,res,lib);
-    }
+  /*** need interpolation */
+  if(itp){
+    z1 = gfrCrossSectionURR(pm,ke  ,ner,sys,res,lib);
+    z2 = gfrCrossSectionURR(pm,ke+1,ner,sys,res,lib);
+    z0 = gfrUInterpolation(elab,z1,z2);
+  }
+  /*** no interpolation case */
+  else{
+    z0 = gfrCrossSectionURR(pm,ke,ner,sys,res,lib);
   }
 
   delete [] res;
@@ -91,7 +110,88 @@ Pcross gfrCrossSectionURR(const int ner, const double elab, System *sys, ENDF *l
 /**********************************************************/
 /*      Unresolved Resonance Parameters at Given Energy   */
 /**********************************************************/
-int gfrURetrieveParameter(const int nl, int idx, ENDF *lib, URResonance *res)
+int gfrURetrieveParameterA(const int nl, int idx, ENDF *lib, URResonance *res)
+{
+  int p = 0; // index for a given (L,J) pair
+
+  /*** for all L partial waves */
+  for(int l=0 ; l<nl ; l++){
+    /*** CONT */
+    int njs = lib->rdata[idx].n1;
+    idx ++;
+
+    for(int j=0 ; j<njs ; j++){
+      /*** LIST */
+      res[p].l   = l;
+
+      int k = 0;
+      res[p].bw[0].er = 0.0;;                   // dummy energy
+      res[p].bw[0].d  = lib->xptr[idx][0];      // average spacing
+      res[p].j2 = (int)(2.0*lib->xptr[idx][1]); // 2 x J
+      res[p].dfn      = lib->xptr[idx][2];      // d.o.f for neutron channel
+      res[p].bw[k].gn = lib->xptr[idx][3];      // reduced neutron width
+      res[p].bw[k].gg = lib->xptr[idx][4];      // gamma width
+
+      res[p].ne  = 1;   // one energy point
+      res[p].dfg = 0.0; // gamma d.o.f
+
+      p ++;
+      idx ++;
+
+      if(p >= MAX_URESONANCE){
+        cerr << "too many L,J groups in URR" << endl;
+        return(0);
+      }
+    }
+  }
+  return(p);
+}
+
+
+int gfrURetrieveParameterB(const int nl, int idx, ENDF *lib, URResonance *res, const int ne, double *fwx)
+{
+  int p = 0; // index for a given (L,J) pair
+
+  /*** for all L partial waves */
+  for(int l=0 ; l<nl ; l++){
+    /*** CONT */
+    int njs = lib->rdata[idx].n1;
+    idx ++;
+
+    for(int j=0 ; j<njs ; j++){
+      /*** LIST */
+      res[p].l   = l;
+      res[p].dff = lib->rdata[idx].l2;           // d.o.f for fission channel
+      double d   = lib->xptr[idx][0];            // average spacing
+      res[p].j2  = (int)(2.0*lib->xptr[idx][1]); // 2 x J
+      res[p].dfn = lib->xptr[idx][2];            // d.o.f for neutron channel
+      double gn  = lib->xptr[idx][3];            // reduced neutron width
+      double gg  = lib->xptr[idx][4];            // gamma width
+
+      res[p].ne  = ne;  // number of energy points = fission width data
+      res[p].dfg = 0.0; // gamma d.o.f,not sure if zero works
+
+      for(int k=0 ; k<ne ; k++){
+        res[p].bw[k].er = fwx[k];                // energy point
+        res[p].bw[k].d  = d;
+        res[p].bw[k].gn = gn;
+        res[p].bw[k].gg = gg;
+        res[p].bw[k].gf = lib->xptr[idx][6 + k]; // fission width
+      }
+      p ++;
+      idx ++;
+
+      if(p >= MAX_URESONANCE){
+        cerr << "too many L,J groups in URR" << endl;
+        return(0);
+      }
+    }
+  }
+  return(p);
+}
+
+
+int gfrURetrieveParameterC(const int nl, int idx, ENDF *lib, URResonance *res)
 {
   int p = 0; // index for a given (L,J) pair
 
@@ -268,7 +368,7 @@ Pcross gfrBreitWignerURR(int ke, double gj, double elab, double alpha, ChannelWa
 
   df[0] = res->dfn;  if(df[0] == 0.0) df[0] =  1.0; // ad hoc
   df[1] = res->dff;  if(df[1] == 0.0) df[1] =  4.0; // ad hoc
-  df[2] = res->dfg;  if(df[2] == 0.0) df[2] =  2.0; // ad hoc
+  df[2] = res->dfg;  if(df[2] == 0.0) df[2] = 20.0; // ad hoc
   df[3] = res->dfx;
  
  
